--- a/Week_02-Data_Prep_and_EDA/Week_02_Practice.ipynb
+++ b/Week_02-Data_Prep_and_EDA/Week_02_Practice.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPTUVAPCf1Koz5gUgRDlpEA",
+      "authorship_tag": "ABX9TyOOS8RmorLvQg+H1vH9v2aN",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,7 +34,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "XfxDOs2Jnhhu",
-        "outputId": "724e5133-ed52-4da4-8569-cb5a6d668b5e"
+        "outputId": "bdd09550-7e55-4ac1-95ad-1997cc216af7"
       },
       "outputs": [
         {
@@ -42,12 +42,12 @@
           "name": "stdout",
           "text": [
             "Cloning into 'gendata'...\n",
-            "remote: Enumerating objects: 21, done.\u001b[K\n",
-            "remote: Counting objects: 100% (21/21), done.\u001b[K\n",
-            "remote: Compressing objects: 100% (17/17), done.\u001b[K\n",
-            "remote: Total 21 (delta 5), reused 0 (delta 0), pack-reused 0\u001b[K\n",
-            "Receiving objects: 100% (21/21), 18.92 KiB | 4.73 MiB/s, done.\n",
-            "Resolving deltas: 100% (5/5), done.\n"
+            "remote: Enumerating objects: 26, done.\u001b[K\n",
+            "remote: Counting objects: 100% (26/26), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (20/20), done.\u001b[K\n",
+            "remote: Total 26 (delta 7), reused 6 (delta 2), pack-reused 0\u001b[K\n",
+            "Receiving objects: 100% (26/26), 19.83 KiB | 2.48 MiB/s, done.\n",
+            "Resolving deltas: 100% (7/7), done.\n"
           ]
         }
       ],
@@ -66,7 +66,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "RssZ3BI5oVu9",
-        "outputId": "36b64ca4-dba1-4008-8bee-041ca5108cf7"
+        "outputId": "b15d6ef4-2692-4aef-85ad-69de93a98b42"
       },
       "execution_count": 2,
       "outputs": [
@@ -82,30 +82,32 @@
     {
       "cell_type": "code",
       "source": [
-        "import gendata.generators as gen\n",
+        "from gendata.generators import lr_12feats_2decs as gen\n",
         "\n",
-        "gen.lr_12features_2decs"
+        "gen.create_dataset()"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 176
+          "height": 35
         },
         "id": "UENuXNfZoqKo",
-        "outputId": "417f569a-9aa1-4370-dcef-a5c1127c191f"
+        "outputId": "8939dd5e-12be-4b47-ed3f-8e457226d730"
       },
-      "execution_count": 3,
+      "execution_count": 7,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "AttributeError",
-          "evalue": "module 'gendata.generators' has no attribute 'lr_12features_2decs'",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-3-78ce30711a41>\u001b[0m in \u001b[0;36m<cell line: 3>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mgendata\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgenerators\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mgen\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mgen\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlr_12features_2decs\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;31mAttributeError\u001b[0m: module 'gendata.generators' has no attribute 'lr_12features_2decs'"
-          ]
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'lr_12feats_2decs.csv has been created in session storage'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 7
         }
       ]
     },
@@ -127,7 +129,7 @@
         "id": "p_fIq9qKpTxF",
         "outputId": "ad63f33e-6ad9-498f-cbd4-c04057b3a8bc"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -555,7 +557,7 @@
         "id": "3Bjo9iYurBJW",
         "outputId": "a28635d0-d845-4b13-aafe-e111a8f507cc"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -983,7 +985,7 @@
         "id": "WexndmXcspXB",
         "outputId": "3f358222-f950-49bb-d15a-253ed2e234e7"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1015,7 +1017,7 @@
         "id": "QPmvgYEbstz4",
         "outputId": "e723dcbe-1980-4f76-e6e8-fb40a126d5f2"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1039,7 +1041,7 @@
         "id": "nFvRVzegs2-4",
         "outputId": "80642352-530e-4ab5-d191-834ad2da61ce"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1063,7 +1065,7 @@
         "id": "641r9cxHtejx",
         "outputId": "7fff63cb-1c30-4831-8928-4ea5b07a802a"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1087,7 +1089,7 @@
         "id": "eZB921q6tobX",
         "outputId": "bbfc29c2-3b9b-45ec-eb6a-5b8fcbc3339b"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1111,7 +1113,7 @@
         "id": "4vwEUfTWt0xk",
         "outputId": "b4defee1-aeab-4310-8c4b-91878fc6623f"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1134,7 +1136,7 @@
         "id": "tbymZE3xt5iE",
         "outputId": "a41cf239-97f6-4c45-cf12-f40465c7bd81"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1161,7 +1163,7 @@
         "id": "SmkvBwd-uPTR",
         "outputId": "9fdfb2d0-fd75-40e8-c6a1-bb6424d0c010"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1185,7 +1187,7 @@
         "id": "seKRiSS1uYHw",
         "outputId": "7e5ba94d-cc7b-4591-c618-a137067b1731"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1209,7 +1211,7 @@
         "id": "yyVJxP9eukGE",
         "outputId": "6e5e1d26-4921-4aaf-e4bb-7b2cf0fbe11d"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1233,7 +1235,7 @@
         "id": "DYVG_8v-utiU",
         "outputId": "92a5af51-0196-4090-887f-73a7f04beb03"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1644,7 +1646,7 @@
         "id": "oJwrOh4Mu6dh",
         "outputId": "fdef828d-fa6d-487d-a3f0-c5519cc74717"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2055,7 +2057,7 @@
         "id": "XH7MuFj7vf5a",
         "outputId": "6665845a-3706-438f-b6fa-ba05188f8928"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2464,7 +2466,7 @@
         "id": "EV7Jd4XNv6z5",
         "outputId": "de7b69d5-84f5-4a3f-c33d-742b1f31409f"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2505,7 +2507,7 @@
         "id": "HX2RYzQJwGFr",
         "outputId": "817bb915-b18b-4d40-a546-0d0697c5ec70"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2532,7 +2534,7 @@
         "id": "jzpGEEKswF6e",
         "outputId": "86f25c66-2f84-430f-fcf6-47102e863c2b"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2559,7 +2561,7 @@
         "id": "ZV3WSoOIxFgB",
         "outputId": "f231df41-ceb6-4b22-e511-44ca1866662f"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2607,7 +2609,7 @@
         "id": "mEkg-HO9xO-f",
         "outputId": "fff136d1-1e00-45d4-ef89-2880d3e1d57f"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2637,7 +2639,7 @@
         "id": "jeEdXwznxdR9",
         "outputId": "941ad6c3-dcda-4ce3-c284-453008644972"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2663,7 +2665,7 @@
       "metadata": {
         "id": "Q5982N9gxg3D"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2690,7 +2692,7 @@
         "id": "GJMcmUtFxsT1",
         "outputId": "d6b3d0a5-426e-4f8c-9b5d-8bb3c64d12a6"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2734,7 +2736,7 @@
         "id": "IaCRb3o3x-6z",
         "outputId": "989e575c-023b-45b2-beac-adf95abbf412"
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2785,7 +2787,7 @@
         "id": "MMJTqcDvx61y",
         "outputId": "b8c95a51-cd24-44a3-dc05-91e1bd979ab7"
       },
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2815,7 +2817,7 @@
         "id": "1a0_lm3IzFbD",
         "outputId": "7f0b2e0b-e302-417e-d28b-f499fd92fc0d"
       },
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
