--- a/Week_04-Probability/Week_04_Probability.ipynb
+++ b/Week_04-Probability/Week_04_Probability.ipynb
@@ -1078,8 +1078,7 @@
         "* https://huggingface.co/datasets/osanseviero/twitter-airline-sentiment\n",
         "* https://www.kaggle.com/datasets/crowdflower/twitter-airline-sentiment\n",
         "* https://data.world/crowdflower/airline-twitter-sentiment\n",
-        "* https://github.com/satyajeetkrjha/kaggle-Twitter-US-Airline-Sentiment-/blob/master/Tweets.csv\n",
-        ""
+        "* https://github.com/satyajeetkrjha/kaggle-Twitter-US-Airline-Sentiment-/blob/master/Tweets.csv\n"
       ],
       "metadata": {
         "id": "ymc-vkvhGqRa"
@@ -1109,7 +1108,7 @@
         "outputId": "e048e667-63a5-42a1-a99f-e02cafeed068"
       },
       "id": "Hyt7OAT_IV2p",
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1133,7 +1132,7 @@
         "id": "8D5bYtV5NQz2"
       },
       "id": "8D5bYtV5NQz2",
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1151,7 +1150,7 @@
         "outputId": "3d4f8e73-f46f-4d98-fbbb-7c3a31050405"
       },
       "id": "C85OHsufNkv3",
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1192,7 +1191,7 @@
         "outputId": "838d510b-a53d-4c6c-c97a-8af7cadc343e"
       },
       "id": "UOEL1rzZOO28",
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1224,7 +1223,7 @@
         "outputId": "d688b7e8-f929-4c4b-e7b8-80161343882b"
       },
       "id": "KSb2OaGpPud9",
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1661,7 +1660,7 @@
         "outputId": "62feb065-ed58-48ba-8bf9-8b90888ae808"
       },
       "id": "dZi-SP-iQ3XH",
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1692,7 +1691,7 @@
         "outputId": "69804d37-9a1b-4afd-c849-9bc6d6805d80"
       },
       "id": "Nc7KNfgDQ_an",
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2130,7 +2129,7 @@
         "outputId": "4e9b600a-42dc-41ac-8ec4-1dda6befd552"
       },
       "id": "yrwocCxdRgfy",
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2317,7 +2316,7 @@
         "outputId": "8ce97489-81f3-4271-ffc3-7262a54c6723"
       },
       "id": "QSf3Ep3LSj_q",
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2350,7 +2349,7 @@
         "outputId": "eb377921-ec27-447f-b539-cd920c5d9eec"
       },
       "id": "-PAoHyzGS3o1",
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2375,7 +2374,7 @@
         "outputId": "abdac329-902f-41b4-8795-c10ce13d4860"
       },
       "id": "tuWk5r5wS6aC",
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2400,7 +2399,7 @@
         "outputId": "ef1c640b-82c9-4b28-acd0-1dd591cc5bce"
       },
       "id": "38wXN9NnS_-u",
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2424,7 +2423,7 @@
         "outputId": "2c494c1f-efbe-4b25-9305-f6c51707450f"
       },
       "id": "9z33x5YTTEUj",
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2452,7 +2451,7 @@
         "outputId": "c610aa4a-e478-493b-c0ce-3701397a5872"
       },
       "id": "2CQTF5H7TLYt",
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2476,7 +2475,7 @@
         "outputId": "caf251a9-c485-4699-f44f-5865c1c26c3b"
       },
       "id": "0N1vDpeNTRBg",
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2522,7 +2521,7 @@
         "outputId": "81d676c5-b725-476f-a0cf-cde090a66bd5"
       },
       "id": "DPAqKvphTtV9",
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2567,7 +2566,7 @@
         "outputId": "a4769b93-1a46-4616-fc84-acd90bbfceb4"
       },
       "id": "9D8CWbQZT6dG",
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2622,7 +2621,7 @@
         "outputId": "bfd0cb24-0bbb-4657-f7f3-542728178dbc"
       },
       "id": "EKMUPmFyUKHp",
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2651,7 +2650,7 @@
         "outputId": "b8b9d8e6-0bff-471a-8810-288c397d9c12"
       },
       "id": "y_6xXoTdUgIt",
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2681,7 +2680,7 @@
         "outputId": "5dafe2eb-b964-41a0-9b64-535859c7e006"
       },
       "id": "6o9KzO_sUqzT",
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2722,7 +2721,7 @@
         "outputId": "38a1ef14-15ad-4200-b086-3ea5fa36682e"
       },
       "id": "WEN1EInjWAFk",
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2769,7 +2768,7 @@
         "outputId": "9b651e42-ff2a-4bf2-85ed-7a605375e5ce"
       },
       "id": "-Pi2pysqiQLb",
-      "execution_count": 68,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2798,7 +2797,7 @@
         "outputId": "f74846c1-7a98-482d-d1c9-d1542ac15eba"
       },
       "id": "2YthBxguXA5O",
-      "execution_count": 62,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2864,7 +2863,7 @@
         "outputId": "15222a30-c8f5-43fc-eb6c-89ce4911b6de"
       },
       "id": "b_6MPtfuWpI5",
-      "execution_count": 61,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2914,7 +2913,7 @@
         "outputId": "702652e6-bfd0-4204-f22c-4beab84778b2"
       },
       "id": "Iwyf1p3ia9Ul",
-      "execution_count": 64,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2932,7 +2931,7 @@
         "### Naive Bayes Classifier\n",
         "\n",
         "* Conditional Probability: $P(A|B) = \\frac{P(A \\cap B)}{P(B)}$\n",
-        "* $P(A \\cap B)$ can be expressed as an independent intersection $P(A \\cap B) = P(A) * P(B|A)$\n",
+        "* $P(A \\cap B)$ can be expressed as a dependent intersection $P(A \\cap B) = P(A) * P(B|A)$\n",
         "* Bayes Theorem: $P(A|B) = \\frac{P(A)P(B|A)}{P(B)}$\n",
         "* $P(A|B)$: Posterior, A given B, what we are trying to find\n",
         "* $P(A)$: Prior, what we already know, our prior beliefs or understanding\n",
@@ -2965,7 +2964,7 @@
         "outputId": "1a521f80-ba58-4b7a-9640-03dc9f23ca16"
       },
       "id": "zPTE2xN1g6UR",
-      "execution_count": 65,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3005,7 +3004,7 @@
         "outputId": "ac4062a8-bd9a-4c2d-d02e-4a3078797b28"
       },
       "id": "XWq3xT83hq14",
-      "execution_count": 69,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3106,7 +3105,7 @@
         "outputId": "c0b23ab3-4618-439a-c994-be9bb894e67c"
       },
       "id": "e6btZsEhkJFh",
-      "execution_count": 70,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3211,7 +3210,7 @@
         "outputId": "9c37004e-1940-43ff-9922-606817458655"
       },
       "id": "Go0dqnK4kQfU",
-      "execution_count": 71,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3245,7 +3244,7 @@
         "outputId": "8f30d9eb-8b6d-469b-88d6-02b1bcb7b34c"
       },
       "id": "StNtPqkIkfL9",
-      "execution_count": 81,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3723,7 +3722,7 @@
         "outputId": "30d6bacd-616d-425c-8fd9-ebfae9e55b6b"
       },
       "id": "ME03mu5Bkwxt",
-      "execution_count": 73,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3836,7 +3835,7 @@
         "outputId": "2b94a790-6e10-4fb7-bc97-022b80a13c9c"
       },
       "id": "zo3KMi7zk1Vv",
-      "execution_count": 77,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3872,7 +3871,7 @@
         "outputId": "84776c7f-4c9e-41c7-f2aa-b49127e51f94"
       },
       "id": "BXY9U0ldl7rL",
-      "execution_count": 79,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3913,6 +3912,7 @@
     },
     "colab": {
       "provenance": [],
+      "toc_visible": true,
       "include_colab_link": true
     },
     "widgets": {
