--- a/Week_08-Text_Mining/Week_08_Extra_Credit_Pt_II.ipynb
+++ b/Week_08-Text_Mining/Week_08_Extra_Credit_Pt_II.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1Dct-Y6XhTCjoomECSSxIZNzmDc2txsfI",
-      "authorship_tag": "ABX9TyNkKNu8zaXjw/+C9+zFlFiu",
+      "authorship_tag": "ABX9TyNXEfelPbHeVLznRw6iEjmC",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -59,7 +59,7 @@
       "metadata": {
         "id": "GE7Uylljjg6s"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -70,7 +70,7 @@
       "metadata": {
         "id": "XUwiPTugm6xF"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -93,7 +93,7 @@
       "metadata": {
         "id": "f51XHFzhm8o3"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -108,7 +108,7 @@
       "metadata": {
         "id": "SqnKWPEbpNfc"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -130,7 +130,7 @@
       "metadata": {
         "id": "zUDoFjaqpDPZ"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -139,6 +139,7 @@
         "# # https://www.kaggle.com/code/oscarbeijbom/titanictransformers/notebook\n",
         "# # https://www.nyckel.com/blog/titanic-vs-transformers/\n",
         "# # https://www.kaggle.com/code/isobeldaley/titanic-score-distribution-excluding-score-1\n",
+        "# # https://www.analyticsvidhya.com/blog/2021/05/all-you-need-to-know-about-bert\n",
         "# import numpy as np\n",
         "# from typing import List\n",
         "# from tqdm import tqdm\n",
@@ -183,7 +184,7 @@
       "metadata": {
         "id": "-QLFTV56pA3W"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     }
   ]
